<resources>
    <string name="app_name">NotificationDemo02</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileLabel">Profile</string>
    <string name="usersLabel">Users</string>
    <string name="notificationsLabel">Notifications</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="loginBtnText">Login</string>
    <string name="hintName">Name</string>
    <string name="registerBtnText">Register</string>
    <string name="backtoLoginPageText">Back To Login Page</string>
    <string name="default_notification_channel_id">Vibhu_01</string>


</resources>
